# nanoconfsc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  nanoconf.py  pyproject.toml  simple.nconf
.github/workflows/: codeql-analysis.yml  python-publish.yml
animals/: penguin.nconf
tests/: test_nanoconfsc.py
tests/data/animals/: dog.nconf  lion.nconf
