[project]
name = "nanoconfsc"
description = "The tiny, opinionated, config loader"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE", name="MIT"}
keywords = ["nanoconfsc", "config", "configuration", "settings"]
authors = [
    {name = "John Muthua", email = "caveomuthama@gmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "python-box==7.0.1",
    "pyyaml==6.0.2",
]

dynamic = ["version"]